<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeat_activity_background"
    tools:context=".FatalActivity"
    android:orientation="horizontal"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="170dp"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@id/linearLayoutFatalButtons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginTop="6dp"/>

            <TextView
                android:id="@+id/textViewAppVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="6dp"/>

            <TextView
                android:id="@+id/textViewGameVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="6dp"/>

            <TextView
                android:id="@+id/textViewEnderCoreSdk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="6dp"/>
            <TextView
                android:id="@+id/textViewOSSdk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="6dp"/>

            <TextView
                android:id="@+id/textViewBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="6dp"/>

            <TextView
                android:id="@+id/textViewModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="6dp"/>

            <TextView
                android:id="@+id/textViewSupportedABIS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="6dp"/>

            <TextView
                android:id="@+id/textViewSafeMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="6dp"/>
        </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayoutFatalButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_clear_data"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClearClicked"
            android:textSize="21sp"
            android:textColor="@drawable/text_selector"
            android:background="@drawable/text_background_selector"
            android:gravity="center"
            android:layout_margin="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_copy"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onCopyClicked"
                android:textSize="21sp"
                android:textColor="@drawable/text_selector"
                android:background="@drawable/text_background_selector"
                android:gravity="center"
                android:layout_margin="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_exit"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onExitClicked"
            android:textSize="21sp"
            android:textColor="@drawable/text_selector"
            android:background="@drawable/text_background_selector"
            android:gravity="center"
            android:layout_margin="4dp"/>
        </LinearLayout>

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_margin="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_fatal_message_title"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_fatal_message_summary"
                android:textSize="18sp"/>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/textViewFatalMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>